--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         Never do VHL again.
     </h1>
     <p class="text-lg sm:text-xl text-gray-300 mb-10">
-        VHL autofills <i>every</i> question on VHLCentral, including creative answer responses, with Quizlet based, AI refined answers using our proprietary BailesEngine.
+        VHL autofills <i>every</i> question on VHLCentral, including creative answer responses, with Quizlet based, AI refined answers using our proprietary BailessEngine.
     </p>
     <a href="https://chrome.google.com/webstore" target="_blank" rel="noopener noreferrer"
        class="inline-block px-8 py-4 rounded-2xl text-lg font-semibold shimmer transition transform hover:scale-105 shadow-lg", style="font-family: 'JetBrains Mono', monospace; font-weight: bolder">
